--- a/overall-success.html
+++ b/overall-success.html
@@ -359,23 +359,24 @@
                     </div>
 
 
-                    <div class="flex justify-between gap-6 p-6 bg-white shadow main-div rounded-2xl">
+                    <div
+                        class="flex flex-col justify-between gap-6 p-6 bg-white shadow lg:flex-row main-div rounded-2xl">
                         <!-- KPI Cards -->
-                        <div class="flex flex-col gap-6 left-card text-fonts max-w-[400px] w-full min-w-[400px]">
+                        <div class="flex flex-col gap-6 left-card text-fonts w-full lg:max-w-[400px] lg:min-w-[400px]">
                             <div>
                                 <div class="flex items-center gap-2 text-fonts">
-                                    <span class="text-3xl font-bold text-green-600 text-fonts">71,6%</span>
+                                    <span class="text-3xl font-bold text-green-600">71,6%</span>
                                     <span
                                         class="bg-green-100 text-green-600 text-xs font-bold px-2 py-0.5 rounded">+24%</span>
                                 </div>
-                                <p class="mt-1 text-sm font-semibold text-gray-700 text-fonts">Completion Rate</p>
+                                <p class="mt-1 text-sm font-semibold text-gray-700">Completion Rate</p>
                                 <div class="h-3 bg-green-700 rounded mt-2 w-[70%]"></div>
                                 <div class="h-3 bg-green-100 rounded mt-1 w-[50%]"></div>
                                 <p class="text-xs text-green-700 ml-1 mt-0.5">Avg Rate</p>
                             </div>
                             <div>
                                 <div class="flex items-center gap-2 text-fonts">
-                                    <span class="text-3xl font-bold text-blue-700 text-fonts">35 sec</span>
+                                    <span class="text-3xl font-bold text-blue-700">35 sec</span>
                                     <span
                                         class="bg-blue-100 text-blue-700 text-xs font-bold px-2 py-0.5 rounded">+8%</span>
                                 </div>
@@ -387,32 +388,12 @@
                         </div>
 
                         <!-- Chart Card -->
-                        <div class="relative">
-                            <div id="pie-chart-container" class="w-[700px] h-[500px] mx-auto"></div>
-                            <div
-                                class="absolute  bottom-[30px] left-1/2 transform -translate-x-1/2 grid grid-cols-2 gap-2">
-                                <div class="flex items-center gap-2 px-[16px] py-[12px] bg-white shadow rounded-xl">
-                                    <div class="w-4 h-4 rounded-full" style="background:#00d4ff"></div>
-                                    <span class="text-[11px] font-semibold text-gray-800 text-style">NOT STARTED</span>
-                                </div>
-                                <div class="flex items-center gap-2 px-[16px] py-[12px] bg-white shadow rounded-xl">
-                                    <div class="w-4 h-4 rounded-full" style="background:#ff006e"></div>
-                                    <span class="text-[11px] font-semibold text-gray-800 text-style">ABANDONED BY
-                                        CUSTOMER</span>
-                                </div>
-                                <div class="flex items-center gap-2 px-[16px] py-[12px] bg-white shadow rounded-xl">
-                                    <div class="w-4 h-4 rounded-full" style="background:#06ffa5"></div>
-                                    <span class="text-[11px] font-semibold text-gray-800 text-style">VERIFICATION
-                                        FAILURE</span>
-                                </div>
-                                <div class="flex items-center gap-2 px-[16px] py-[12px] bg-white shadow rounded-xl ">
-                                    <div class="w-4 h-4 rounded-full" style="background:#ffbe0b"></div>
-                                    <span class="text-[11px] font-semibold text-gray-800 text-style">VERIFICATION
-                                        SUCCESS</span>
-                                </div>
-                            </div>
+                        <div class="relative w-full">
+                            <div id="pie-chart-container"
+                                class="w-full max-w-[700px] h-[350px] sm:h-[350px] lg:h-[500px] mx-auto"></div>
                         </div>
                     </div>
+
                 </div>
             </main>
 
